# stk

./: .svnignore  AUTHORS  COPYING  ChangeLog  Doxyfile  Makefile.am  Makefile.in  README  README.md  README.mk  ToDo.txt  _import-svn2git.sh  aclocal.m4  config-h.in  config.h.in  configure  configure.in  quick_build.sh  reconf  run_configure.sh
doc/Documentation/figures/eps/: hashing.eps
lib/: Makefile.am  Makefile.in  getopt.c  gnufeatures.h  gnusearch.h  hsearch_r.cpp
src/: Doxyfile  Makefile  Makefile.am  Makefile.in  Makefile.lin  Makefile.win  SERest.c  SERest.cc  SExpand.c  SExpand.cc  SFea2OutP.c  SFea2OutP.cc  SFeaCat.c  SFeaCat.cc  SFeaStack.cc  SFeaStat.cc  SLRatio.c  SLRatio.cc  SNet.cc  SNetStats.cc  SResults.c  SResults.cc  SRover.c  SRover.cc  SScore.cc  STcpAccDump.cc  STree.cc  SVite.c  SVite.cc  SWE.cc  SWE_sg.cc  SWE_ubmstats.cc  dscore.cc
src/SNetLib/: Makefile.am  Makefile.in  barrier.h  element.cc  element.h  nlayer.cc  nlayer.h  nnet.cc  nnet.h  progobj.cc  progobj.h  socketobj.cc  socketobj.h  timers.cc  timers.h
src/STKLib/: BDTree.cc  BDTree.h  BDTree.tcc  BDTree_IO.cc  BDTree_IO.h  BQuestion.cc  BQuestion.h  BasicVector.cc  BasicVector.h  BasicVector.tcc  BinaryQuestion.h  BinaryTree.h  ContextSample.cc  ContextSample.h  Decoder.cc  Decoder.h  Decoder.tcc  DecoderNetwork.cc  DecoderNetwork.h  DecoderNetwork_IO.cc  DecoderNetwork_IO.tcc  Decoder_Network.cc  Error.cc  Error.h  FeaCatAdapter.cc  FeaCatAdapter.h  Features.cc  Features.h  Lattice.cc  Lattice.h  Makefile.am  Makefile.in  Makefile.lin  Makefile.win  Math.h  Matrix.cc  Matrix.h  Matrix.tcc  MlfStream.cc  MlfStream.h  (+53 more)
src/STKLib/deprecated/: README
src/old/: SCombAcc.c  SMMIUpdate.c
utils/: MMF_GM2OP.sh  fixHMM.awk
